--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -67,75 +67,184 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/*
-@include font-face($myriad_pro_bold, font-files("MYRIADPRO-BOLD.woff"));
-@include font-face($myriad_pro_bold_condensed, font-files("MYRIADPRO-BOLDCOND.woff"));
-@include font-face($myriad_pro_condensed, font-files("MYRIADPRO-COND.woff"));
-@include font-face($myriad_pro_regular, font-files("MYRIADPRO-REGULAR.woff"));
-*/
-/* line 31, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 html, body {
   height: 100%;
 }
 
-/* line 38, ../sass/screen.scss */
+/* line 44, ../sass/screen.scss */
 body {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: Arial;
   color: #333;
   line-height: 1.42857143;
 }
 
-/* line 43, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: stretch;
+  height: 100%;
+}
+
+/* line 60, ../sass/screen.scss */
+.flex-menu:nth-child(1) {
+  order: 0;
+  flex: 0 1 auto;
+  align-self: auto;
+  background-color: #000;
+}
+@media (min-width: 700px) {
+  /* line 60, ../sass/screen.scss */
+  .flex-menu:nth-child(1) {
+    background-color: #fff;
+  }
+}
+
+/* line 70, ../sass/screen.scss */
+.flex-content:nth-child(2) {
+  order: 1;
+  flex: 3 1 auto;
+  align-self: auto;
+  background-color: #eee;
+}
+
+/* line 77, ../sass/screen.scss */
+.flex-footer:nth-child(3) {
+  order: 2;
+  flex: 0 1 auto;
+  align-self: auto;
+  background-color: #a1cca5;
+}
+
+/* line 84, ../sass/screen.scss */
+.nav-menu {
+  height: 60px;
+}
+@media (min-width: 700px) {
+  /* line 84, ../sass/screen.scss */
+  .nav-menu {
+    height: 160px;
+  }
+}
+
+/* line 91, ../sass/screen.scss */
+.menu-mobile {
+  margin-top: 20px;
+}
+
+/* line 94, ../sass/screen.scss */
 h1 {
   font-size: 40px;
   font-weight: bold;
   padding: 10px 0;
 }
+@media (min-width: 700px) {
+  /* line 94, ../sass/screen.scss */
+  h1 {
+    font-size: 80px;
+  }
+}
 
-/* line 48, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 h3 {
   font-size: 20px;
   font-weight: bold;
   padding: 10px 0;
-  color: #9DCDA6;
+  color: #a1cca5;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 57, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 .container-main {
   background-color: #fff;
   text-align: center;
 }
 
-/* line 61, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 .container {
   background-color: #eee;
-  padding: 20px 15px;
+  padding: 10px 0;
   text-align: justify;
 }
 
-/* line 66, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
+.container-fluid {
+  background-color: #eee;
+  margin-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+@media (min-width: 700px) {
+  /* line 120, ../sass/screen.scss */
+  .container-fluid {
+    padding-left: 25%;
+    padding-right: 25%;
+  }
+}
+
+/* line 130, ../sass/screen.scss */
 .logo {
   text-align: center;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
+.logo-size {
+  width: 250px;
+  height: 150px;
+}
+@media (min-width: 700px) {
+  /* line 133, ../sass/screen.scss */
+  .logo-size {
+    width: 500px;
+    height: 350px;
+  }
+}
+
+/* line 141, ../sass/screen.scss */
+.logo-small {
+  width: 90px;
+  height: 40px;
+}
+
+/* line 145, ../sass/screen.scss */
 .menu {
   width: 250px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 700px) {
+  /* line 145, ../sass/screen.scss */
+  .menu {
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+  }
 }
 
-/* line 73, ../sass/screen.scss */
+/* line 156, ../sass/screen.scss */
 .menu > li {
   padding: 0.5em 0;
-  border-bottom: 1px solid #9DCDA6;
+  border-bottom: 1px solid #a1cca5;
+}
+@media (min-width: 700px) {
+  /* line 156, ../sass/screen.scss */
+  .menu > li {
+    padding: 0.5em 0.5em;
+    border-right: 1px solid #9DCDA6;
+    border-bottom: 0;
+  }
 }
 
-/* line 77, ../sass/screen.scss */
+/* line 165, ../sass/screen.scss */
 .menu > li > a {
   text-decoration: none;
   cursor: pointer;
@@ -143,7 +252,12 @@ strong {
   text-transform: uppercase;
 }
 
-/* line 85, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
+.menu > li > a:hover {
+  color: #ce5f2d;
+}
+
+/* line 176, ../sass/screen.scss */
 .row {
   padding-right: 15px;
   padding-left: 15px;
@@ -151,52 +265,46 @@ strong {
   margin-left: auto;
 }
 
-/* line 91, ../sass/screen.scss */
+/* line 182, ../sass/screen.scss */
 .footer-link {
-  color: #C57161;
+  color: #ce5f2d;
 }
 
-/* line 94, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 footer {
   text-align: center;
   bottom: 0;
   width: 100%;
 }
-@media (min-width: 700px) {
-  /* line 94, ../sass/screen.scss */
-  footer {
-    position: absolute;
-  }
-}
 
-/* line 105, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 footer > p {
   font-size: 0.7em;
   margin: 15px auto;
 }
 @media (max-width: 700px) {
-  /* line 105, ../sass/screen.scss */
+  /* line 196, ../sass/screen.scss */
   footer > p {
     font-size: 16px;
-    margin: 35px 50px;
+    margin: 20px 50px;
   }
 }
 
-/* line 114, ../sass/screen.scss */
+/* line 205, ../sass/screen.scss */
 .primary-color {
-  color: #C57161;
+  color: #ce5f2d;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 .arrow-up {
   width: 0;
   height: 0;
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
-  border-bottom: 15px solid #9DCDA6;
+  border-bottom: 15px solid #a1cca5;
 }
 
-/* line 124, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 .arrow-down {
   width: 0;
   height: 0;
@@ -205,7 +313,7 @@ footer > p {
   border-top: 15px solid #f00;
 }
 
-/* line 131, ../sass/screen.scss */
+/* line 222, ../sass/screen.scss */
 .arrow-right {
   width: 0;
   height: 0;
@@ -214,16 +322,16 @@ footer > p {
   border-left: 15px solid green;
 }
 
-/* line 138, ../sass/screen.scss */
+/* line 229, ../sass/screen.scss */
 .arrow-left {
   width: 0;
   height: 0;
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
-  border-right: 15px solid #C57161;
+  border-right: 15px solid #ce5f2d;
 }
 
-/* line 145, ../sass/screen.scss */
+/* line 236, ../sass/screen.scss */
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -232,19 +340,19 @@ input[type="date"],
 textarea {
   border: solid 0px;
   border-bottom-width: 1px;
-  border-bottom-color: #333;
+  border-bottom-color: #ce5f2d;
   background-color: transparent;
   margin: 0 0 10px;
 }
 
-/* line 158, ../sass/screen.scss */
+/* line 249, ../sass/screen.scss */
 label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
 }
 
-/* line 164, ../sass/screen.scss */
+/* line 255, ../sass/screen.scss */
 .form-control {
   display: block;
   width: 100%;
