--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -441,33 +441,38 @@ select option {
   display: none;
 }
 
-/* line 458, ../sass/screen.scss */
+/* line 453, ../sass/screen.scss */
+.display-header {
+  display: none;
+}
+
+/* line 460, ../sass/screen.scss */
 .view-container {
   display: flex;
   margin-top: 100px;
 }
 @media (min-width: 800px) {
-  /* line 458, ../sass/screen.scss */
+  /* line 460, ../sass/screen.scss */
   .view-container {
     margin-top: 210px;
     height: 600px;
   }
 }
 
-/* line 466, ../sass/screen.scss */
+/* line 468, ../sass/screen.scss */
 h1 {
   font-size: 40px;
   font-weight: bold;
   padding: 10px 0;
 }
 @media (min-width: 800px) {
-  /* line 466, ../sass/screen.scss */
+  /* line 468, ../sass/screen.scss */
   h1 {
     font-size: 76px;
   }
 }
 
-/* line 474, ../sass/screen.scss */
+/* line 476, ../sass/screen.scss */
 h3 {
   font-size: 20px;
   font-weight: bold;
@@ -475,72 +480,72 @@ h3 {
   color: #a1cca5;
 }
 
-/* line 480, ../sass/screen.scss */
+/* line 482, ../sass/screen.scss */
 h5 {
   font-size: 16px;
   font-weight: bold;
 }
 
-/* line 484, ../sass/screen.scss */
+/* line 486, ../sass/screen.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 487, ../sass/screen.scss */
+/* line 489, ../sass/screen.scss */
 .container {
   width: 100%;
   padding: 10px 0;
   text-align: justify;
 }
 
-/* line 492, ../sass/screen.scss */
+/* line 494, ../sass/screen.scss */
 .container-color {
   background-color: #eee;
 }
 
-/* line 495, ../sass/screen.scss */
+/* line 497, ../sass/screen.scss */
 .container-info {
   margin: 0 20px;
 }
 @media (min-width: 800px) {
-  /* line 495, ../sass/screen.scss */
+  /* line 497, ../sass/screen.scss */
   .container-info {
     margin: 0 20%;
   }
 }
 
-/* line 501, ../sass/screen.scss */
+/* line 503, ../sass/screen.scss */
 .logo-container {
   text-align: center;
 }
 
-/* line 504, ../sass/screen.scss */
+/* line 506, ../sass/screen.scss */
 .logo-size {
   width: 250px;
   height: 150px;
 }
 @media (min-width: 800px) {
-  /* line 504, ../sass/screen.scss */
+  /* line 506, ../sass/screen.scss */
   .logo-size {
     width: 450px;
     height: 300px;
   }
 }
 
-/* line 512, ../sass/screen.scss */
+/* line 514, ../sass/screen.scss */
 .logo-small {
   width: 90px;
   height: 40px;
 }
 
-/* line 516, ../sass/screen.scss */
+/* line 518, ../sass/screen.scss */
 .menu-principal {
   width: 100%;
   margin-top: 20px;
   text-align: center;
 }
 
-/* line 521, ../sass/screen.scss */
+/* line 523, ../sass/screen.scss */
 .menu-ul {
   width: 250px;
   margin: 0 auto;
@@ -548,7 +553,7 @@ strong {
   flex-direction: column;
 }
 @media (min-width: 800px) {
-  /* line 521, ../sass/screen.scss */
+  /* line 523, ../sass/screen.scss */
   .menu-ul {
     flex-direction: row;
     width: 100%;
@@ -556,13 +561,13 @@ strong {
   }
 }
 
-/* line 532, ../sass/screen.scss */
+/* line 534, ../sass/screen.scss */
 .menu-ul > li {
   padding: 0.5em 0;
   border-bottom: 2px solid #a1cca5;
 }
 @media (min-width: 800px) {
-  /* line 532, ../sass/screen.scss */
+  /* line 534, ../sass/screen.scss */
   .menu-ul > li {
     padding: 0.5em 0.5em;
     border-right: 2px solid #a1cca5;
@@ -570,7 +575,7 @@ strong {
   }
 }
 
-/* line 541, ../sass/screen.scss */
+/* line 543, ../sass/screen.scss */
 .menu-ul > li > a {
   text-decoration: none;
   cursor: pointer;
@@ -578,12 +583,12 @@ strong {
   text-transform: uppercase;
 }
 
-/* line 549, ../sass/screen.scss */
+/* line 551, ../sass/screen.scss */
 .menu-ul > li > a:hover {
   color: #ce5f2d;
 }
 
-/* line 554, ../sass/screen.scss */
+/* line 556, ../sass/screen.scss */
 .arrow-up {
   width: 0;
   height: 0;
@@ -592,7 +597,7 @@ strong {
   border-bottom: 15px solid #a1cca5;
 }
 
-/* line 561, ../sass/screen.scss */
+/* line 563, ../sass/screen.scss */
 .arrow-down {
   width: 0;
   height: 0;
@@ -601,7 +606,7 @@ strong {
   border-top: 15px solid #f00;
 }
 
-/* line 568, ../sass/screen.scss */
+/* line 570, ../sass/screen.scss */
 .arrow-right {
   width: 0;
   height: 0;
@@ -611,7 +616,7 @@ strong {
   margin-left: 5px;
 }
 
-/* line 576, ../sass/screen.scss */
+/* line 578, ../sass/screen.scss */
 .arrow-left {
   width: 0;
   height: 0;
@@ -620,7 +625,7 @@ strong {
   border-right: 15px solid #ce5f2d;
 }
 
-/* line 583, ../sass/screen.scss */
+/* line 585, ../sass/screen.scss */
 .back {
   display: flex;
   justify-content: flex-end;
@@ -629,7 +634,7 @@ strong {
   margin-top: 30px;
 }
 
-/* line 590, ../sass/screen.scss */
+/* line 592, ../sass/screen.scss */
 .btn-action {
   display: flex;
   flex-direction: column;
@@ -638,24 +643,24 @@ strong {
   margin-top: 30px;
 }
 
-/* line 597, ../sass/screen.scss */
+/* line 599, ../sass/screen.scss */
 .back > a, .btn-action > a {
   margin-left: 10px;
   text-decoration: none;
   color: #000;
 }
 
-/* line 602, ../sass/screen.scss */
+/* line 604, ../sass/screen.scss */
 .btn-action > a {
   margin: 5px 0 0 0;
 }
 
-/* line 605, ../sass/screen.scss */
+/* line 607, ../sass/screen.scss */
 .back > a:hover, .btn-action > a:hover {
   color: #ce5f2d;
 }
 
-/* line 609, ../sass/screen.scss */
+/* line 611, ../sass/screen.scss */
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -669,14 +674,14 @@ textarea {
   margin: 0 0 10px;
 }
 
-/* line 622, ../sass/screen.scss */
+/* line 624, ../sass/screen.scss */
 label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
 }
 
-/* line 628, ../sass/screen.scss */
+/* line 630, ../sass/screen.scss */
 .form-control {
   display: block;
   width: 100%;
@@ -690,14 +695,14 @@ label {
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
-/* line 646, ../sass/screen.scss */
+/* line 648, ../sass/screen.scss */
 .noticia-container {
   display: flex;
   flex-direction: row;
   margin-bottom: 15px;
 }
 
-/* line 651, ../sass/screen.scss */
+/* line 653, ../sass/screen.scss */
 .noticia-foto {
   /*
   border: 1px solid $color_6;
@@ -707,7 +712,7 @@ label {
   */
 }
 
-/* line 659, ../sass/screen.scss */
+/* line 661, ../sass/screen.scss */
 .noticia-foto > img {
   height: 100px;
   width: 100px;
@@ -718,22 +723,22 @@ label {
   text-align: center;
 }
 
-/* line 668, ../sass/screen.scss */
+/* line 670, ../sass/screen.scss */
 .noticia-info {
   margin-left: 20px;
 }
 
-/* line 671, ../sass/screen.scss */
+/* line 673, ../sass/screen.scss */
 .noticia-info > p {
   font-size: 12px;
 }
 
-/* line 674, ../sass/screen.scss */
+/* line 676, ../sass/screen.scss */
 .buscar {
   margin-top: 20px;
 }
 
-/* line 677, ../sass/screen.scss */
+/* line 679, ../sass/screen.scss */
 .buscar-control {
   width: 89%;
   background-image: none;
@@ -743,14 +748,14 @@ label {
 }
 
 @media (min-width: 800px) {
-  /* line 686, ../sass/screen.scss */
+  /* line 688, ../sass/screen.scss */
   .contacto-container {
     flex-direction: row;
     display: flex;
     width: 80%;
   }
 
-  /* line 691, ../sass/screen.scss */
+  /* line 693, ../sass/screen.scss */
   .arrow-contacto {
     border-left: 1px solid #000;
     margin-right: 5%;
@@ -759,7 +764,7 @@ label {
     margin-left: 10%;
   }
 
-  /* line 698, ../sass/screen.scss */
+  /* line 700, ../sass/screen.scss */
   .contacto-controls {
     width: 100%;
     display: flex;
@@ -767,7 +772,7 @@ label {
     align-items: flex-end;
   }
 
-  /* line 704, ../sass/screen.scss */
+  /* line 706, ../sass/screen.scss */
   .contacto-controls > .controls {
     width: 100%;
     display: flex;
@@ -775,13 +780,13 @@ label {
     justify-content: flex-end;
   }
 
-  /* line 710, ../sass/screen.scss */
+  /* line 712, ../sass/screen.scss */
   .contacto-controls > .controls > .form-control {
     display: inline;
     width: 60%;
   }
 }
-/* line 719, ../sass/screen.scss */
+/* line 721, ../sass/screen.scss */
 .footer {
   font-family: Arial, serif;
   font-size: 16px;
@@ -793,7 +798,7 @@ label {
   height: 160px;
 }
 @media (min-width: 800px) {
-  /* line 719, ../sass/screen.scss */
+  /* line 721, ../sass/screen.scss */
   .footer {
     position: relative;
     bottom: 0;
@@ -802,19 +807,19 @@ label {
   }
 }
 
-/* line 736, ../sass/screen.scss */
+/* line 738, ../sass/screen.scss */
 .footer > p {
   margin: 35px 50px;
   text-align: center;
 }
 @media (min-width: 800px) {
-  /* line 736, ../sass/screen.scss */
+  /* line 738, ../sass/screen.scss */
   .footer > p {
     margin: 10px 0;
   }
 }
 
-/* line 743, ../sass/screen.scss */
+/* line 745, ../sass/screen.scss */
 .footer > p > a {
   text-decoration: none;
   color: #ce5f2d;
