--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -67,29 +67,44 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 43, ../sass/screen.scss */
+/* line 44, ../sass/screen.scss */
 body {
   font-family: Arial;
   color: #333;
   line-height: 1.42857143;
 }
 
-/* line 49, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 53, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
-/* line 57, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 *:focus {
   outline: 0;
 }
 
 /* line 62, ../sass/screen.scss */
+.color-default {
+  color: #000;
+}
+
+/* line 65, ../sass/screen.scss */
+.color-primary {
+  color: #ce5f2d;
+}
+
+/* line 68, ../sass/screen.scss */
+.color-terciary {
+  color: #a1cca5;
+}
+
+/* line 74, ../sass/screen.scss */
 .header {
   max-width: 100%;
   width: 100%;
@@ -102,7 +117,7 @@ html {
   z-index: 1000;
 }
 @media (min-width: 800px) {
-  /* line 62, ../sass/screen.scss */
+  /* line 74, ../sass/screen.scss */
   .header {
     display: flex;
     justify-content: center;
@@ -111,29 +126,29 @@ html {
   }
 }
 
-/* line 98, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 ::-webkit-scrollbar {
   width: 8px;
 }
 
-/* line 102, ../sass/screen.scss */
+/* line 114, ../sass/screen.scss */
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
 }
 
-/* line 107, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 ::-webkit-scrollbar-thumb {
   border-radius: 4px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 select {
   background-color: white;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 select option {
   color: #ce5f2d;
   background-color: black;
@@ -142,7 +157,7 @@ select option {
   appearance: none;
 }
 
-/* line 126, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 .nav-button-transformed {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -151,7 +166,7 @@ select option {
   transform: rotate(180deg);
 }
 
-/* line 134, ../sass/screen.scss */
+/* line 146, ../sass/screen.scss */
 .nav-button {
   flex: 1;
   margin-top: 15px;
@@ -164,7 +179,7 @@ select option {
   transform-origin: 13px 13px;
   transform-style: preserve-3D;
 }
-/* line 149, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 .nav-button div {
   cursor: pointer;
   width: 25px;
@@ -178,7 +193,7 @@ select option {
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
-/* line 163, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .nav-button .nav-button-top-transformed {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -186,7 +201,7 @@ select option {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-/* line 170, ../sass/screen.scss */
+/* line 182, ../sass/screen.scss */
 .nav-button .nav-button-mid-transformed {
   -webkit-transform: translate(-3px, 0px);
   -moz-transform: translate(-3px, 0px);
@@ -194,7 +209,7 @@ select option {
   -o-transform: translate(-3px, 0px);
   transform: translate(-3px, 0px);
 }
-/* line 177, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .nav-button .nav-button-bot-transformed {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
@@ -203,13 +218,13 @@ select option {
   transform: rotate(-45deg);
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .menu-mobile {
   display: flex;
   height: 100%;
   z-index: 100;
 }
-/* line 196, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 .menu-mobile .header-separator {
   height: 40px;
   margin-top: 5px;
@@ -217,7 +232,7 @@ select option {
   margin-left: 40px;
   background-color: white;
 }
-/* line 204, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 .menu-mobile .logo {
   flex: 5;
   padding: 5px;
@@ -236,7 +251,7 @@ select option {
   text-align: left;
 }
 */
-/* line 223, ../sass/screen.scss */
+/* line 235, ../sass/screen.scss */
 .menu-mobile-panel {
   width: 70%;
   color: white;
@@ -252,7 +267,7 @@ select option {
   -o-transform: translate(-1000px, 0);
   transform: translate(-1000px, 0);
 }
-/* line 234, ../sass/screen.scss */
+/* line 246, ../sass/screen.scss */
 .menu-mobile-panel .menu-desktop-btn {
   margin-top: 15px;
   font-family: 'Open Sans', serif;
@@ -262,14 +277,14 @@ select option {
   color: #000;
 }
 @media (min-width: 800px) {
-  /* line 223, ../sass/screen.scss */
+  /* line 235, ../sass/screen.scss */
   .menu-mobile-panel {
     visibility: collapse;
     display: none;
   }
 }
 
-/* line 255, ../sass/screen.scss */
+/* line 267, ../sass/screen.scss */
 .menu-mobile-panel-show {
   -webkit-transform: translate(0px, 0);
   -moz-transform: translate(0px, 0);
@@ -278,14 +293,14 @@ select option {
   transform: translate(0px, 0);
 }
 
-/* line 263, ../sass/screen.scss */
+/* line 275, ../sass/screen.scss */
 .menu-mobile-panel-show-add {
   -webkit-animation: menu-mobile-enter 0.4s;
   -o-animation: menu-mobile-enter 0.4s;
   animation: menu-mobile-enter 0.4s;
 }
 
-/* line 269, ../sass/screen.scss */
+/* line 281, ../sass/screen.scss */
 .menu-mobile-panel-show-remove {
   -webkit-animation: menu-mobile-leave 0.4s;
   -o-animation: menu-mobile-leave 0.4s;
@@ -325,7 +340,7 @@ select option {
   }
 }
 @media (max-width: 799px) {
-  /* line 310, ../sass/screen.scss */
+  /* line 322, ../sass/screen.scss */
   .menu-type-desktop {
     visibility: collapse;
     display: none !important;
@@ -333,14 +348,14 @@ select option {
 }
 
 @media (min-width: 800px) {
-  /* line 317, ../sass/screen.scss */
+  /* line 329, ../sass/screen.scss */
   .menu-type-mobile {
     visibility: collapse;
     display: none !important;
   }
 }
 
-/* line 324, ../sass/screen.scss */
+/* line 336, ../sass/screen.scss */
 .menu-desktop {
   display: flex;
   flex-direction: column;
@@ -350,7 +365,7 @@ select option {
   min-width: 600px;
   width: 1020px;
 }
-/* line 333, ../sass/screen.scss */
+/* line 345, ../sass/screen.scss */
 .menu-desktop #menu-desktop-logo {
   flex: 2;
   background-color: transparent;
@@ -361,26 +376,26 @@ select option {
   padding: 5px;
   z-index: 401;
 }
-/* line 345, ../sass/screen.scss */
+/* line 357, ../sass/screen.scss */
 .menu-desktop #menu-desktop-logo img {
   margin: 20px 0;
 }
-/* line 353, ../sass/screen.scss */
+/* line 365, ../sass/screen.scss */
 .menu-desktop #menu-desktop-logo:hover {
   cursor: pointer;
 }
-/* line 357, ../sass/screen.scss */
+/* line 369, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right {
   flex: 8;
   display: flex;
   flex-direction: column;
   position: relative;
 }
-/* line 362, ../sass/screen.scss */
+/* line 374, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-upper {
   flex: 1;
 }
-/* line 367, ../sass/screen.scss */
+/* line 379, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower {
   background-color: transparent;
   flex: 1;
@@ -396,7 +411,7 @@ select option {
   align-items: center;
   max-width: 100%;
 }
-/* line 384, ../sass/screen.scss */
+/* line 396, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower #menu-desktop-lower-inner {
   max-width: 1000px;
   width: 100%;
@@ -405,7 +420,7 @@ select option {
   justify-content: flex-end;
   align-items: flex-end;
 }
-/* line 393, ../sass/screen.scss */
+/* line 405, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn {
   cursor: pointer;
   font-family: Arial, serif;
@@ -420,59 +435,59 @@ select option {
   transition: opacity .5s ease-in-out;
 }
 @media (max-width: 1000px) {
-  /* line 393, ../sass/screen.scss */
+  /* line 405, ../sass/screen.scss */
   .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn {
     font-size: 14px;
   }
 }
-/* line 421, ../sass/screen.scss */
+/* line 433, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn-selected {
   color: #ce5f2d;
   opacity: 1;
 }
-/* line 432, ../sass/screen.scss */
+/* line 444, ../sass/screen.scss */
 .menu-desktop #menu-desktop-right #menu-desktop-lower .menu-desktop-btn:hover {
   color: #ce5f2d;
   opacity: 1;
 }
 
-/* line 450, ../sass/screen.scss */
+/* line 462, ../sass/screen.scss */
 .display-menu-desktop {
   display: none;
 }
 
-/* line 453, ../sass/screen.scss */
+/* line 465, ../sass/screen.scss */
 .display-header {
   display: none;
 }
 
-/* line 460, ../sass/screen.scss */
+/* line 472, ../sass/screen.scss */
 .view-container {
   display: flex;
-  margin-top: 100px;
+  margin-top: 15%;
 }
 @media (min-width: 800px) {
-  /* line 460, ../sass/screen.scss */
+  /* line 472, ../sass/screen.scss */
   .view-container {
     margin-top: 210px;
     height: 600px;
   }
 }
 
-/* line 468, ../sass/screen.scss */
+/* line 482, ../sass/screen.scss */
 h1 {
   font-size: 40px;
   font-weight: bold;
   padding: 10px 0;
 }
 @media (min-width: 800px) {
-  /* line 468, ../sass/screen.scss */
+  /* line 482, ../sass/screen.scss */
   h1 {
     font-size: 76px;
   }
 }
 
-/* line 476, ../sass/screen.scss */
+/* line 490, ../sass/screen.scss */
 h3 {
   font-size: 20px;
   font-weight: bold;
@@ -480,72 +495,83 @@ h3 {
   color: #a1cca5;
 }
 
-/* line 482, ../sass/screen.scss */
+/* line 496, ../sass/screen.scss */
 h5 {
   font-size: 16px;
   font-weight: bold;
 }
 
-/* line 486, ../sass/screen.scss */
+/* line 500, ../sass/screen.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 489, ../sass/screen.scss */
+/* line 503, ../sass/screen.scss */
 .container {
   width: 100%;
   padding: 10px 0;
   text-align: justify;
 }
 
-/* line 494, ../sass/screen.scss */
+/* line 508, ../sass/screen.scss */
+.container-menu-margin {
+  margin-top: 50px;
+}
+@media (min-width: 800px) {
+  /* line 508, ../sass/screen.scss */
+  .container-menu-margin {
+    margin-top: 0;
+  }
+}
+
+/* line 514, ../sass/screen.scss */
 .container-color {
   background-color: #eee;
 }
 
-/* line 497, ../sass/screen.scss */
+/* line 517, ../sass/screen.scss */
 .container-info {
   margin: 0 20px;
 }
 @media (min-width: 800px) {
-  /* line 497, ../sass/screen.scss */
+  /* line 517, ../sass/screen.scss */
   .container-info {
     margin: 0 20%;
   }
 }
 
-/* line 503, ../sass/screen.scss */
+/* line 523, ../sass/screen.scss */
 .logo-container {
   text-align: center;
 }
 
-/* line 506, ../sass/screen.scss */
+/* line 526, ../sass/screen.scss */
 .logo-size {
   width: 250px;
   height: 150px;
 }
 @media (min-width: 800px) {
-  /* line 506, ../sass/screen.scss */
+  /* line 526, ../sass/screen.scss */
   .logo-size {
     width: 450px;
     height: 300px;
   }
 }
 
-/* line 514, ../sass/screen.scss */
+/* line 534, ../sass/screen.scss */
 .logo-small {
   width: 90px;
   height: 40px;
 }
 
-/* line 518, ../sass/screen.scss */
+/* line 538, ../sass/screen.scss */
 .menu-principal {
   width: 100%;
   margin-top: 20px;
   text-align: center;
 }
 
-/* line 523, ../sass/screen.scss */
+/* line 543, ../sass/screen.scss */
 .menu-ul {
   width: 250px;
   margin: 0 auto;
@@ -553,7 +579,7 @@ strong {
   flex-direction: column;
 }
 @media (min-width: 800px) {
-  /* line 523, ../sass/screen.scss */
+  /* line 543, ../sass/screen.scss */
   .menu-ul {
     flex-direction: row;
     width: 100%;
@@ -561,13 +587,13 @@ strong {
   }
 }
 
-/* line 534, ../sass/screen.scss */
+/* line 554, ../sass/screen.scss */
 .menu-ul > li {
   padding: 0.5em 0;
   border-bottom: 2px solid #a1cca5;
 }
 @media (min-width: 800px) {
-  /* line 534, ../sass/screen.scss */
+  /* line 554, ../sass/screen.scss */
   .menu-ul > li {
     padding: 0.5em 0.5em;
     border-right: 2px solid #a1cca5;
@@ -575,7 +601,7 @@ strong {
   }
 }
 
-/* line 543, ../sass/screen.scss */
+/* line 563, ../sass/screen.scss */
 .menu-ul > li > a {
   text-decoration: none;
   cursor: pointer;
@@ -583,12 +609,12 @@ strong {
   text-transform: uppercase;
 }
 
-/* line 551, ../sass/screen.scss */
+/* line 571, ../sass/screen.scss */
 .menu-ul > li > a:hover {
   color: #ce5f2d;
 }
 
-/* line 556, ../sass/screen.scss */
+/* line 576, ../sass/screen.scss */
 .arrow-up {
   width: 0;
   height: 0;
@@ -597,7 +623,7 @@ strong {
   border-bottom: 15px solid #a1cca5;
 }
 
-/* line 563, ../sass/screen.scss */
+/* line 583, ../sass/screen.scss */
 .arrow-down {
   width: 0;
   height: 0;
@@ -606,7 +632,7 @@ strong {
   border-top: 15px solid #f00;
 }
 
-/* line 570, ../sass/screen.scss */
+/* line 590, ../sass/screen.scss */
 .arrow-right {
   width: 0;
   height: 0;
@@ -616,7 +642,7 @@ strong {
   margin-left: 5px;
 }
 
-/* line 578, ../sass/screen.scss */
+/* line 598, ../sass/screen.scss */
 .arrow-left {
   width: 0;
   height: 0;
@@ -625,7 +651,7 @@ strong {
   border-right: 15px solid #ce5f2d;
 }
 
-/* line 585, ../sass/screen.scss */
+/* line 605, ../sass/screen.scss */
 .back {
   display: flex;
   justify-content: flex-end;
@@ -634,7 +660,7 @@ strong {
   margin-top: 30px;
 }
 
-/* line 592, ../sass/screen.scss */
+/* line 612, ../sass/screen.scss */
 .btn-action {
   display: flex;
   flex-direction: column;
@@ -643,24 +669,24 @@ strong {
   margin-top: 30px;
 }
 
-/* line 599, ../sass/screen.scss */
+/* line 619, ../sass/screen.scss */
 .back > a, .btn-action > a {
   margin-left: 10px;
   text-decoration: none;
   color: #000;
 }
 
-/* line 604, ../sass/screen.scss */
+/* line 624, ../sass/screen.scss */
 .btn-action > a {
   margin: 5px 0 0 0;
 }
 
-/* line 607, ../sass/screen.scss */
+/* line 627, ../sass/screen.scss */
 .back > a:hover, .btn-action > a:hover {
   color: #ce5f2d;
 }
 
-/* line 611, ../sass/screen.scss */
+/* line 631, ../sass/screen.scss */
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -674,14 +700,14 @@ textarea {
   margin: 0 0 10px;
 }
 
-/* line 624, ../sass/screen.scss */
+/* line 644, ../sass/screen.scss */
 label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
 }
 
-/* line 630, ../sass/screen.scss */
+/* line 650, ../sass/screen.scss */
 .form-control {
   display: block;
   width: 100%;
@@ -695,14 +721,21 @@ label {
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
-/* line 648, ../sass/screen.scss */
+/* line 668, ../sass/screen.scss */
 .noticia-container {
   display: flex;
   flex-direction: row;
   margin-bottom: 15px;
 }
 
-/* line 653, ../sass/screen.scss */
+/* line 673, ../sass/screen.scss */
+.show-noticia-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+/* line 678, ../sass/screen.scss */
 .noticia-foto {
   /*
   border: 1px solid $color_6;
@@ -712,7 +745,12 @@ label {
   */
 }
 
-/* line 661, ../sass/screen.scss */
+/* line 686, ../sass/screen.scss */
+.show-noticia-foto {
+  margin: 30px 0 20px;
+}
+
+/* line 689, ../sass/screen.scss */
 .noticia-foto > img {
   height: 100px;
   width: 100px;
@@ -723,22 +761,38 @@ label {
   text-align: center;
 }
 
-/* line 670, ../sass/screen.scss */
+/* line 698, ../sass/screen.scss */
+.show-noticia-foto > img {
+  height: 200px;
+  width: 100%;
+  border: 1px solid #000;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+/* line 707, ../sass/screen.scss */
 .noticia-info {
   margin-left: 20px;
 }
 
-/* line 673, ../sass/screen.scss */
-.noticia-info > p {
+/* line 710, ../sass/screen.scss */
+.show-noticia-info {
+  margin: 0 15px;
+}
+
+/* line 713, ../sass/screen.scss */
+.noticia-info > p, .show-noticia-info > p {
   font-size: 12px;
 }
 
-/* line 676, ../sass/screen.scss */
+/* line 716, ../sass/screen.scss */
 .buscar {
   margin-top: 20px;
 }
 
-/* line 679, ../sass/screen.scss */
+/* line 719, ../sass/screen.scss */
 .buscar-control {
   width: 89%;
   background-image: none;
@@ -748,14 +802,14 @@ label {
 }
 
 @media (min-width: 800px) {
-  /* line 688, ../sass/screen.scss */
+  /* line 728, ../sass/screen.scss */
   .contacto-container {
     flex-direction: row;
     display: flex;
     width: 80%;
   }
 
-  /* line 693, ../sass/screen.scss */
+  /* line 733, ../sass/screen.scss */
   .arrow-contacto {
     border-left: 1px solid #000;
     margin-right: 5%;
@@ -764,7 +818,7 @@ label {
     margin-left: 10%;
   }
 
-  /* line 700, ../sass/screen.scss */
+  /* line 740, ../sass/screen.scss */
   .contacto-controls {
     width: 100%;
     display: flex;
@@ -772,7 +826,7 @@ label {
     align-items: flex-end;
   }
 
-  /* line 706, ../sass/screen.scss */
+  /* line 746, ../sass/screen.scss */
   .contacto-controls > .controls {
     width: 100%;
     display: flex;
@@ -780,13 +834,77 @@ label {
     justify-content: flex-end;
   }
 
-  /* line 712, ../sass/screen.scss */
+  /* line 752, ../sass/screen.scss */
   .contacto-controls > .controls > .form-control {
     display: inline;
     width: 60%;
   }
 }
-/* line 721, ../sass/screen.scss */
+/* line 757, ../sass/screen.scss */
+.sabias-slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+/* line 764, ../sass/screen.scss */
+.sabias-container {
+  height: 300px;
+  width: 350px;
+  border: 1px solid #a1cca5;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+}
+@media (min-width: 800px) {
+  /* line 764, ../sass/screen.scss */
+  .sabias-container {
+    width: 500px;
+  }
+}
+
+/* line 775, ../sass/screen.scss */
+.sabias-container-2 {
+  height: 278px;
+  width: 328px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background-color: #a1cca5;
+  margin: 10px;
+}
+@media (min-width: 800px) {
+  /* line 775, ../sass/screen.scss */
+  .sabias-container-2 {
+    width: 478px;
+  }
+}
+
+/* line 787, ../sass/screen.scss */
+.slider-indicator {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+/* line 792, ../sass/screen.scss */
+.slider_1, .slider_2, .slider_3, .slider_4 {
+  border: 1px solid #333;
+  border-radius: 10px;
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+  margin: 10px;
+}
+
+/* line 800, ../sass/screen.scss */
+.slider_selected {
+  background-color: #8CC63F;
+  border: 1px solid #fff;
+}
+
+/* line 806, ../sass/screen.scss */
 .footer {
   font-family: Arial, serif;
   font-size: 16px;
@@ -798,7 +916,7 @@ label {
   height: 160px;
 }
 @media (min-width: 800px) {
-  /* line 721, ../sass/screen.scss */
+  /* line 806, ../sass/screen.scss */
   .footer {
     position: relative;
     bottom: 0;
@@ -807,19 +925,19 @@ label {
   }
 }
 
-/* line 738, ../sass/screen.scss */
+/* line 823, ../sass/screen.scss */
 .footer > p {
   margin: 35px 50px;
   text-align: center;
 }
 @media (min-width: 800px) {
-  /* line 738, ../sass/screen.scss */
+  /* line 823, ../sass/screen.scss */
   .footer > p {
     margin: 10px 0;
   }
 }
 
-/* line 745, ../sass/screen.scss */
+/* line 830, ../sass/screen.scss */
 .footer > p > a {
   text-decoration: none;
   color: #ce5f2d;
